--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack",
+    "build": "webpack",
     "dev": "webpack-dev-server",
-    "build": "webpack dev/common/index.js build/common/bundle.js"
+    "js": "webpack dev/common/index.js build/common/bundle.js"
   },
   "repository": {
     "type": "git",
