--- a/package.json
+++ b/package.json
@@ -58,7 +58,15 @@
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.1.2",
     "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "webpack-dev-server": "^2.9.7",
+    "babel-core": "^6.6.5",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.6.1",
+    "babel-preset-es2015": "^6.6.0",
+    "curry": "^1.2.0",
+    "gsap": "^1.18.3",
+    "lodash": "^4.9.0",
+    "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
     "jquery": "^3.2.1",
